--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^123.0.0",
     "next": "13.4.12",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
