--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "firebase-admin": "^11.10.1",
     "google-auth-library": "^9.0.0",
     "googleapis": "^123.0.0",
     "next": "13.4.12",
