--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^123.0.0",
     "next": "13.4.12",
     "openai-edge": "^1.2.2",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
